...
    private static let decoder = JSONDecoder()
    private static let background = DispatchQueue.global(qos: .default)
    
    enum Endpoint {
        case fetch(page: Int?)
        case create(user: UserDTO)
        case delete(id: String)
    }
    
    private func advancePage() {
        nextPage += 1
    }
    
...
