...
    var subscriptions = Set<AnyCancellable>()
    var viewModel: UserListViewModel!
    var viewControllerFactory: UserListViewControllerFactory!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Users"
        
        setupTableView()
        setupBindings()
        fetchMore()
    }
    
...
